@@ -1,3 +1,9 @@
+2011-06-03  Nick Clifton  <nickc@redhat.com>
+
+	* Makefile.am (ALL_EMULATION_SOURCES): Add eelf32am33lin.c
+	Add rule to build eelf32am33lin.c
+	* Makefile.in: Regenerate.
+
 2011-06-02  Nick Clifton  <nickc@redhat.com>
 
 	* lexsup.c: Fix spelling mistake in comment.
